custom-packages/serialosc/error.txt
[jeff@jbb-dell:~]$ cd nix/nixpkgs-fork/

[jeff@jbb-dell:~/nix/nixpkgs-fork]$ nix-build -A serialosc
these derivations will be built:
  /nix/store/cgn6qsq1il7m89mwx6z5qmvl3g5a319j-serialosc.drv
building '/nix/store/cgn6qsq1il7m89mwx6z5qmvl3g5a319j-serialosc.drv'...
unpacking sources
unpacking source archive /nix/store/jglzxp2h56c9i442vjxdf52lhr91p8aw-serialosc-cec0ea7
source root is serialosc-cec0ea7
patching sources
applying patch /nix/store/d7qvxgw8j7jnh8p4hcvf7ysq0i1ad7x7-git-commit-in-wscript.patch
patching file wscript
configuring
configure flags: --prefix=/nix/store/h3rm0j489cq3107q9z5pdygq8azjpywa-serialosc configure
Setting top to                           : /build/serialosc-cec0ea7
Setting out to                           : /build/serialosc-cec0ea7/build

Checking for 'gcc' (C compiler)          : gcc

Checking for working poll()              : yes
Checking for libudev                     : yes
Checking for libmonome                   : yes
Checking for liblo                       : yes
Checking for strdup                      : yes
Checking for _strdup                     : no
Checking for strndup                     : yes
Checking for strcasecmp                  : yes
Checking for header unistd.h             : yes
Checking for header dns_sd.h             : yes
Checking for library dl                  : yes

'configure' finished successfully (0.785s)
building
build flags: --enable-system-libuv build
Waf: Entering directory `/build/serialosc-cec0ea7/build'
[ 1/50] Compiling src/common/platform/linux.c
[ 2/50] Compiling src/common/platform/posix.c
[ 3/50] Compiling src/common/util.c
[ 4/50] Compiling src/common/ipc.c
[ 5/50] Compiling third-party/libuv/src/unix/poll.c
[ 6/50] Compiling third-party/libuv/src/threadpool.c
[ 7/50] Compiling third-party/libuv/src/unix/core.c
[ 8/50] Compiling third-party/libuv/src/unix/async.c
[ 9/50] Compiling third-party/libuv/src/unix/linux-core.c
[10/50] Linking build/src/libserialosc-common.a
[11/50] Compiling third-party/libuv/src/unix/proctitle.c
[12/50] Compiling third-party/libuv/src/unix/timer.c
[13/50] Compiling third-party/libuv/src/unix/getaddrinfo.c
[14/50] Compiling third-party/libuv/src/unix/thread.c
[15/50] Compiling third-party/libuv/src/unix/tcp.c
[16/50] Compiling third-party/libuv/src/unix/fs.c
../third-party/libuv/src/unix/linux-core.c: In function 'uv__io_poll':
../third-party/libuv/src/unix/linux-core.c:268:5: error: converting a packed 'struct uv__epoll_event' pointer (alignment 1) to a 'uv__io_t' {aka 'struct uv__io_s'} pointer (alignment 8) may result in an unaligned pointer value [-Werror=address-of-packed-member]
  268 |     loop->watchers[loop->nwatchers] = (void*) events;
      |     ^~~~
In file included from ../third-party/libuv/src/unix/internal.h:37,
                 from ../third-party/libuv/src/unix/linux-core.c:22:
../third-party/libuv/src/unix/linux-syscalls.h:97:8: note: defined here
   97 | struct uv__epoll_event {
      |        ^~~~~~~~~~~~~~~
In file included from ../third-party/libuv/include/uv.h:61,
                 from ../third-party/libuv/src/unix/linux-core.c:21:
../third-party/libuv/include/uv-unix.h:84:8: note: defined here
   84 | struct uv__io_s {
      |        ^~~~~~~~
cc1: all warnings being treated as errors

Waf: Leaving directory `/build/serialosc-cec0ea7/build'
Build failed
 -> task in 'LIBUV' failed with exit status 1 (run with -v to display more information)
builder for '/nix/store/cgn6qsq1il7m89mwx6z5qmvl3g5a319j-serialosc.drv' failed with exit code 1
error: build of '/nix/store/cgn6qsq1il7m89mwx6z5qmvl3g5a319j-serialosc.drv' failed

[jeff@jbb-dell:~/nix/nixpkgs-fork]$
